--- a/index.html
+++ b/index.html
@@ -10,43 +10,43 @@
         <meta property="og:site_name" content="Termowizja na terenie miasta Kraków i województwie Śląskim">
         <meta property="og:title" content="Start">
         <meta property="og:url" content="http://twardowski-odbiorymieszkan.pl/">
-        <link href="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/logo.png" rel="shortcut icon" type="image/x-icon">
-        <link href="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/logo.png" rel="apple-touch-icon-precomposed">
+        <link href="./sources/logo.png" rel="shortcut icon" type="image/x-icon">
+        <link href="./sources/logo.png" rel="apple-touch-icon-precomposed">
         <title>Termowizja na terenie miasta Kraków i województwie Śląskim | Start</title>
-        <link href="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/theme.css" rel="stylesheet">
+        <link href="./sources/theme.css" rel="stylesheet">
         <script>var $pagekit = {"url":"","csrf":"85f232a1065be9a2ba6ec5507cfdb2b01ae76006"};</script>
         <script>var $pkframework = {"google_maps_key":""};</script>
         <script>var $formmaker = {"config":{"recaptha_sitekey":""},"formitem":{"id":1,"status":1,"title":"Szybki kontakt","slug":"szybki-kontakt-termowizja","data":{"value":"","classSfx":"","user_email_field":false,"email_subject":"Thank you for your submission","thankyou_markdown":true,"email_body_markdown":true,"afterSubmit":"redirect","submitButton":"Wy\u015blij","formStyle":"uk-form-stacked","recaptcha_theme":"","recaptcha_type":"","recaptcha_size":"","redirect":"@page\/5","google_datalayer":true,"hide_title":true},"nrActiveSubmissions":0,"url":"\/formmaker\/1"},"submission":{"form_id":1,"status":1,"data":{"telefon":{"field":{"id":1,"form_id":1,"priority":1,"type":"textbox","label":"Telefon","slug":"telefon","options":{},"data":{"value":["+48"],"data":[],"classSfx":"","help_text":"Prosimy poda\u0107 numer telefonu.","help_show":"tooltip_icon","hasOptions":0,"minLength":7,"maxLength":18,"rows":1,"placeholder":"","multiple":0,"controls":null,"repeatable":null,"required":true},"roles":[],"value":["+48"],"valuedata":{"data0":{"value":"+48"}},"formatted":["+48"]},"slug":"telefon","type":{"id":"textbox","label":"Text area","hasOptions":0,"required":-1,"multiple":0,"minLength":0,"maxLength":0,"rows":0,"placeholder":""},"label":"Telefon","value":["+48"],"formatted":["+48"],"data":{"data0":{"value":"+48"}},"field_id":1}}},"fields":[{"id":1,"form_id":1,"priority":1,"type":"textbox","label":"Telefon","slug":"telefon","options":[],"data":{"value":["+48"],"data":[],"classSfx":"","help_text":"Prosimy poda\u0107 numer telefonu.","help_show":"tooltip_icon","hasOptions":0,"minLength":7,"maxLength":18,"rows":1,"placeholder":"","multiple":0,"controls":null,"repeatable":null,"required":true},"roles":[],"value":["+48"],"valuedata":{"data0":{"value":"+48"}},"formatted":["+48"]}]};</script>
         <script>var $fieldtypes = {"ajax_url":"api\/formmaker\/submission\/ajax"};</script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/jquery.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/uikit.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/sticky.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/lightbox.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/parallax.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/datepicker.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/theme.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/particles.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/particles.jquery.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/vue.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/lodash.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/pl_PL"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/vue.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/bixie-framework.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/tooltip.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/panel-link.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/link-storage.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/link-page.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/link-user.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/link-blog.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/link-formmaker.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/link-gallery.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/input-link.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/editor.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/editor-plugin.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/upload.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/form-select.min.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/bixie-fieldtypes.js"></script>
-        <script src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/formmaker.js"></script>
+        <script src="./sources/jquery.min.js"></script>
+        <script src="./sources/uikit.min.js"></script>
+        <script src="./sources/sticky.min.js"></script>
+        <script src="./sources/lightbox.min.js"></script>
+        <script src="./sources/parallax.min.js"></script>
+        <script src="./sources/datepicker.min.js"></script>
+        <script src="./sources/theme.js"></script>
+        <script src="./sources/particles.min.js"></script>
+        <script src="./sources/particles.jquery.js"></script>
+        <script src="./sources/vue.min.js"></script>
+        <script src="./sources/lodash.min.js"></script>
+        <script src="./sources/pl_PL"></script>
+        <script src="./sources/vue.js"></script>
+        <script src="./sources/bixie-framework.js"></script>
+        <script src="./sources/tooltip.min.js"></script>
+        <script src="./sources/panel-link.js"></script>
+        <script src="./sources/link-storage.js"></script>
+        <script src="./sources/link-page.js"></script>
+        <script src="./sources/link-user.js"></script>
+        <script src="./sources/link-blog.js"></script>
+        <script src="./sources/link-formmaker.js"></script>
+        <script src="./sources/link-gallery.js"></script>
+        <script src="./sources/input-link.js"></script>
+        <script src="./sources/editor.js"></script>
+        <script src="./sources/editor-plugin.js"></script>
+        <script src="./sources/upload.min.js"></script>
+        <script src="./sources/form-select.min.js"></script>
+        <script src="./sources/bixie-fieldtypes.js"></script>
+        <script src="./sources/formmaker.js"></script>
 <style>
 .container_termo {
     position: relative;
@@ -73,8 +73,8 @@
     <nav class="uk-navbar">
 
         <a class="uk-navbar-brand" href="http://twardowski-odbiorymieszkan.pl/">
-                            <img class="tm-logo uk-responsive-height uk-hidden-small" src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/dark.png" alt="">
-                <img class="tm-logo-small uk-responsive-height uk-visible-small" src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/dark.png" alt="">
+                            <img class="tm-logo uk-responsive-height uk-hidden-small" src="./sources/dark.png" alt="">
+                <img class="tm-logo-small uk-responsive-height uk-visible-small" src="./sources/dark.png" alt="">
                     </a>
 
                 <div class="uk-hidden-small">
@@ -204,7 +204,7 @@ Budownictwo to nasza pasja, a każdy realizowany odbiór techniczny jest dla nas
               
 </div><br>
 <center>
-<img src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/twardowski-odbiorymieskan-termowizja.jpg" alt="Twardowski odbiorymieskan termowizja">
+<img src="./sources/twardowski-odbiorymieskan-termowizja.jpg" alt="Twardowski odbiorymieskan termowizja">
 <center>
 
 
@@ -246,7 +246,7 @@ Budownictwo to nasza pasja, a każdy realizowany odbiór techniczny jest dla nas
 
                                 <div class="uk-panel uk-text-center">
                     <a href="http://twardowski-odbiorymieszkan.pl/">
-                        <img src="./Termowizja na terenie miasta Kraków i województwie Śląskim _ Start_files/logo.png" alt="">
+                        <img src="./sources/logo.png" alt="">
                     </a>
                 </div>
                 
