--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Budownictwo to nasza pasja, a każdy realizowany odbiór techniczny jest dla nas
               
 </div><br>
 <center>
-<img src="./sources/twardowski-odbiorymieskan-termowizja.jpg" alt="Twardowski odbiorymieskan termowizja">
+<img src="./sources/twardowski-odbiorymieskan-termowizja.jpg" alt="Twardowski odbiory mieszkań termowizja">
 <center>
 
 
